# pfic-mtm-8621-generator

./: .gitignore  README.md  f8621.xlsx  f8621_xy_coordinates.py  main.py  pyproject.toml  test_compute_lot.py
